fix some links and plotting

--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -261,7 +261,8 @@
     "\n",
     "ax2.scatter(*(samples[::10].T), c=clustering_new.transform(samples)[::10])\n",
     "ax2.axis('off')\n",
-    "ax2.set_title('assignments of data to centers');"
+    "ax2.set_title('assignments of data to centers')\n",
+    "plt.show();"
    ]
   },
   {
@@ -665,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
