--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -139,7 +139,7 @@
     "$$\n",
     "we have a probability $P_{11} = 97\\%$ to stay in state \"0\" and a $P_{12} = 3\\%$ to transition from state \"0\" to state \"1\" and vice versa. \n",
     "\n",
-    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/impl/sktime.data.Ellipsoids.rst#sktime.data.Ellipsoids)."
+    "We map the state sequence into ellipsoidal shapes in 2-dimensional space. For more details, please see the example data's [documentation](../api/generated/impl/sktime.data.ellipsoids_dataset.Ellipsoids.rst#sktime.data.ellipsoids_dataset.Ellipsoids)."
    ]
   },
   {
@@ -572,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
