--- a/docs/source/notebooks/transition-counting.ipynb
+++ b/docs/source/notebooks/transition-counting.ipynb
@@ -110,11 +110,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
+    "\n",
     "G = nx.from_numpy_matrix(counts.count_matrix, create_using=nx.DiGraph())\n",
     "pos = nx.circular_layout(G)\n",
     "nx.draw_circular(G, node_color='#90EE90')\n",
-    "nx.draw_networkx_labels(G, pos, labels={i: i for i in G.nodes()}, font_size=15);"
+    "nx.draw_networkx_labels(G, pos, labels={i: i for i in G.nodes()}, font_size=15)\n",
+    "plt.show()"
    ]
   },
   {
@@ -228,11 +231,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
     "G = nx.from_numpy_matrix(submodel.count_matrix, create_using=nx.DiGraph())\n",
     "pos = nx.circular_layout(G)\n",
     "nx.draw_circular(G, node_color='#90EE90')\n",
-    "nx.draw_networkx_labels(G, pos, labels={i: i for i in G.nodes()}, font_size=15);"
+    "nx.draw_networkx_labels(G, pos, labels={i: i for i in G.nodes()}, font_size=15)\n",
+    "plt.show()"
    ]
   },
   {
@@ -281,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
