--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For demonstration purposes, we look at the Ellipsoids sample dataset, which is described in some detail in the example data's [documentation](../api/generated/impl/sktime.data.Ellipsoids.rst#sktime.data.Ellipsoids). In short, it is a two-dimensional process that has two metastable states in the form of nonoverlapping ellipsoids."
+    "For demonstration purposes, we look at the Ellipsoids sample dataset, which is described in some detail in the example data's [documentation](../api/generated/impl/sktime.data.ellipsoids_dataset.Ellipsoids.rst#sktime.data.ellipsoids_dataset.Ellipsoids). In short, it is a two-dimensional process that has two metastable states in the form of nonoverlapping ellipsoids."
    ]
   },
   {
@@ -578,8 +578,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "tau = model.cov.lagtime\n",
     "\n",
+    "tau = model.cov.lagtime\n",
     "n_sing = 3\n",
     "\n",
     "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*5, 13))\n",
@@ -603,7 +603,8 @@
     "    cb = ax.imshow(im, origin=\"lower\", cmap=\"bwr\")\n",
     "    f.colorbar(cb, ax=ax)\n",
     "    ax.set_title(\"right eigenfunction {}\".format(i))\n",
-    "plt.tight_layout();"
+    "plt.tight_layout()\n",
+    "plt.show();"
    ]
   },
   {
@@ -736,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
