exchange align* with aligned tex environment

--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -18,10 +18,10 @@
     "\n",
     "Given a sequence of multivariate data $X_t$, it computes the mean-free covariance and time-lagged covariance matrix\n",
     "\n",
-    "\\begin{align*}\n",
+    "$$\\begin{aligned}\n",
     "C_0 &=      (X_t - \\mu)^T \\mathrm{diag}(w) (X_t - \\mu), \\\\\n",
     "C_{\\tau} &= (X_t - \\mu)^T \\mathrm{diag}(w) (X_{t + \\tau} - \\mu),\n",
-    "\\end{align*}\n",
+    "\\end{aligned}$$\n",
     "\n",
     "where $w$ is a vector of weights for each time step. Optionally, one can use the reversible estimate by using symmetrized correlation matrices\n",
     "\n",
