--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -195,11 +195,11 @@
     "\n",
     "To this end, (instantaneous and time-lagged) mean-free covariance matrices $C_{00}, C_{0t}, C_{tt}$ with\n",
     "\n",
-    "\\begin{align*}\n",
+    "$$\\begin{aligned}\n",
     "C_{00} &= \\mathbb{E}_t[(\\chi_0(x_t)-\\mu_0)(\\chi_0(x_t)-\\mu_0)^\\top], \\\\\n",
     "C_{0t} &= \\mathbb{E}_t[(\\chi_0(x_t)-\\mu_0)(\\chi_1(x_{t+\\tau})-\\mu_1)^\\top],\\\\\n",
     "C_{tt} &= \\mathbb{E}_t[(\\chi_1(x_{t+\\tau})-\\mu_1)(\\chi_1(x_{t+\\tau})-\\mu_1)^\\top]\n",
-    "\\end{align*}\n",
+    "\\end{aligned}$$\n",
     "\n",
     "are computed, see also the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). These covariance matrices can be accessed in the computed model:"
    ]
@@ -229,10 +229,10 @@
     "\n",
     "The sought-after weight matrices $U$ and $V$ are then given by\n",
     "\n",
-    "\\begin{align*}\n",
+    "$$\\begin{aligned}\n",
     "U &= C_{00}^{-1/2}U', \\\\\n",
     "V &= C_{tt}^{-1/2}V',\n",
-    "\\end{align*}\n",
+    "\\end{aligned}$$\n",
     "\n",
     "respectively. The singular values as well as $U$ and $V$ are accessible as:"
    ]
