docs and vamp update

--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -270,7 +270,7 @@
    "source": [
     "Now the [tica model](../api/generated/sktime.decomposition.TICAModel.rst#sktime.decomposition.TICAModel) can be estimated.\n",
     "\n",
-    "_Note_: In the reversible (default) case, this assumes that the data comes from an equilibirum distribution. Applying the method as-is to short off-equilibrium data produces heavily biased estimates. See [Koopman reweighting](#Koopman-reweighting) (or the corresponding [API docs](../api/generated/sktime.covariance.KoopmanEstimator.rst#sktime.covariance.KoopmanEstimator)) for a reweighting technique that extends TICA to non-equilibrium data."
+    "_Note_: In the reversible (default) case, this assumes that the data comes from an equilibirum distribution. Applying the method as-is to short off-equilibrium data produces heavily biased estimates. See [Koopman reweighting](#Koopman-reweighting) (or the corresponding [API docs](../api/generated/sktime.covariance.KoopmanWeightingEstimator.rst#sktime.covariance.KoopmanWeightingEstimator)) for a reweighting technique that extends TICA to non-equilibrium data."
    ]
   },
   {
@@ -459,7 +459,7 @@
    "source": [
     "## Koopman reweighting\n",
     "\n",
-    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"nbtica-wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In scikit-time, a [Koopman estimator](../api/generated/sktime.covariance.KoopmanEstimator.rst#sktime.covariance.KoopmanEstimator) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/sktime.covariance.KoopmanModel.rst#sktime.covariance.KoopmanModel) can be used as an argument in TICA's `fit`. \n",
+    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"nbtica-wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In scikit-time, a [Koopman weighting estimator](../api/generated/sktime.covariance.KoopmanWeightingEstimator.rst#sktime.covariance.KoopmanWeightingEstimator) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/sktime.covariance.KoopmanWeightingModel.rst#sktime.covariance.KoopmanWeightingModel) can be used as an argument in TICA's `fit`. \n",
     "\n",
     "This reweighting technique becomes necessary as soon as the available data is not a single long trajectory which equilibrates and then is in an equilibrium state for the rest of the time but rather if many short and at least initially off-equilibrium trajectories are used. "
    ]
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_estimator = sktime.covariance.KoopmanEstimator(lagtime=tica.lagtime)\n",
+    "koopman_estimator = sktime.covariance.KoopmanWeightingEstimator(lagtime=tica.lagtime)\n",
     "reweighting_model = koopman_estimator.fit(feature_trajectory).fetch_model()"
    ]
   },
