--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -51,7 +51,6 @@
    "outputs": [],
    "source": [
     "vamp_estimator = sktime.decomposition.VAMP(\n",
-    "    lagtime=1,  # the number of steps tau under which K is estimated\n",
     "    dim=1  # projection dimension\n",
     ")"
    ]
@@ -91,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the data, all that is left to do is fitting a model and obtaining it from the estimator."
+    "Given the data, all that is left to do is fitting a model by providing covariances and obtaining it from the estimator or using the [from_data](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP.from_data) shortcut directly."
    ]
   },
   {
@@ -100,8 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vamp_estimator.fit(feature_trajectory)\n",
-    "model = vamp_estimator.fetch_model();"
+    "covars = sktime.decomposition.VAMP.covariance_estimator(\n",
+    "    lagtime=1  # the time lag under which the covariance matrices are estimated\n",
+    ").fit(feature_trajectory).fetch_model()\n",
+    "vamp_estimator.fit(covars)\n",
+    "model = vamp_estimator.fetch_model()\n",
+    "\n",
+    "# ---- or ----\n",
+    "\n",
+    "model = sktime.decomposition.VAMP.from_data(feature_trajectory, dim=1, lagtime=1)"
    ]
   },
   {
@@ -175,25 +181,25 @@
     "\n",
     "This matrix is actually a finite-dimensional approximation of the Koopman operator\n",
     "\n",
-    "$$ \\mathcal{K}_\\tau g(x) = \\mathbb{E}[g(x_{t+\\tau} | x_t = x) ], $$\n",
+    "$$ \\mathcal{K}_\\tau f(x) = \\mathbb{E}[f(x_{t+\\tau} | x_t = x) ], $$\n",
     "\n",
-    "which maps for given $x_t$ to the expected value of an arbitrary observable $g$ at time $t+\\tau$. This in particular means that the matrix $K$ depends on $\\mathcal{K}_\\tau$, i.e., models at different lagtimes approximate different operators and are thus not directly comparable.\n",
+    "which maps for given $x_t$ observed through $f$ to the expected value of an arbitrary observable $g$ at time $t+\\tau$. This in particular means that the matrix $K$ depends on $\\mathcal{K}_\\tau$, i.e., models at different lagtimes approximate different operators and are thus not directly comparable.\n",
     "\n",
     "One can show (Theorem 1 of <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>), that the best approximation of $K$ to $\\mathcal{K}_\\tau$ is achieved for\n",
     "\n",
     "$$ \\bar K=\\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k), $$\n",
     "\n",
-    "when $f = (\\psi_1,\\ldots,\\psi_k)$ and $g=(\\phi_1,\\ldots,\\phi_k)$. Here $\\sigma_i$, $\\psi_i$, $\\phi_i$ are the singular values, left singular functions, and right singular functions of $\\mathcal{K}_\\tau^*\\mathcal{K}_\\tau$, respectively. The $\\psi_i$ and $\\phi_i$ should form an orthonormal basis of respective spaces. In particular this means that in this representation,\n",
+    "when $f = (\\psi_1,\\ldots,\\psi_k)$ and $g=(\\phi_1,\\ldots,\\phi_k)$. Here $\\sigma_i$, $\\psi_i$, $\\phi_i$ are the singular values, left singular functions, and right singular functions of $\\mathcal{K}_\\tau^*\\mathcal{K}_\\tau$, respectively. The operator $\\mathcal{K}_\\tau^*\\mathcal{K}_\\tau$ relates to a foward-backward mapping in time. The $\\psi_i$ and $\\phi_i$ should form an orthonormal basis of respective spaces. In particular this means that in this representation,\n",
     "\n",
-    "$$ \\mathbb{E}[\\phi_i(x_{t+\\tau})] = \\sigma_i\\mathbb{E}[\\psi_i(x_t)] \\text{ and } \\bar{\\mathcal{K}}_\\tau g = \\sum_i \\sigma_i \\langle g, \\phi_i \\rangle_{\\rho_1} \\psi_i, $$\n",
+    "$$ \\mathbb{E}[\\phi_i(x_{t+\\tau})] = \\sigma_i\\mathbb{E}[\\psi_i(x_t)] \\text{ and } \\bar{\\mathcal{K}}_\\tau f = \\sum_i \\sigma_i \\langle f, \\phi_i \\rangle_{\\rho_1} \\psi_i, $$\n",
     "\n",
     "where $\\bar{\\mathcal{K}}_\\tau$ denotes the projected Koopman operator.\n",
     "\n",
     "The [VAMP estimator](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP) first and foremost solves the following problem:\n",
     "\n",
-    "> Given a basis set $\\chi^\\top = (\\chi_0, \\chi_1)^\\top$ so that $f = U^\\top \\chi_0$ and $g=V^\\top \\chi_1$, find weights $U,V\\in\\mathbb{R}^{m\\times k}$ so that the resulting linear model $\\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)]$ is optimal.\n",
+    "> Given a basis set $\\chi^\\top = (\\chi_0, \\chi_1)^\\top$ so that $f = U^\\top \\chi_0$ and $g=V^\\top \\chi_1$, find weights $U,V\\in\\mathbb{R}^{m\\times k}$ so that the resulting linear model $\\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)]$ is optimal. For the purposes of estimation the potentially different basis sets $\\chi_0$ and $\\chi_1$ are assumed to be equal. In practice one can achieve this by simply concatenating the observable trajectories in time.\n",
     "\n",
-    "To this end, (instantaneous and time-lagged) mean-free covariance matrices $C_{00}, C_{0t}, C_{tt}$ with\n",
+    "When there are significantly more frames than dimensions in the dataset, the (instantaneous and time-lagged) mean-free covariance matrices $C_{00}, C_{0t}, C_{tt}$ with\n",
     "\n",
     "$$\\begin{aligned}\n",
     "C_{00} &= \\mathbb{E}_t[(\\chi_0(x_t)-\\mu_0)(\\chi_0(x_t)-\\mu_0)^\\top], \\\\\n",
@@ -201,7 +207,7 @@
     "C_{tt} &= \\mathbb{E}_t[(\\chi_1(x_{t+\\tau})-\\mu_1)(\\chi_1(x_{t+\\tau})-\\mu_1)^\\top]\n",
     "\\end{aligned}$$\n",
     "\n",
-    "are computed, see also the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). These covariance matrices can be accessed in the computed model:"
+    "can be computed by the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). <span style=\"color:red\">Otherwise the covariance matrices should be estimated by ...</span> These covariance matrices can be accessed in the computed model:"
    ]
   },
   {
@@ -223,7 +229,7 @@
    "source": [
     "Based on these covariances, the truncated SVD\n",
     "\n",
-    "$$\\bar K = C_{00}^{-1/2}C_{0t}C_{tt}^{-1/2} \\approx U' \\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k) V' $$\n",
+    "$$\\bar K = C_{00}^{-1/2}C_{0t}C_{tt}^{-1/2} \\approx U' \\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k) V'^\\top $$\n",
     "\n",
     "is evaluated, where $\\bar K$ is the Koopman matrix for normalized basis functions $C_{00}^{-1/2}\\chi_0$ and $C_{tt}^{-1/2}\\chi_1$, respectively. The truncation is based on the [dim](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP.dim) parameter of the estimator.\n",
     "\n",
@@ -258,7 +264,43 @@
     "\n",
     "is then given by $K = \\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k)$, $f_i = u_i^\\top\\chi_0$, and $g_i = v_i^\\top\\chi_1$.\n",
     "\n",
-    "The model's [transform(data, right=False)](../api/generated/sktime.decomposition.VAMPModel.rst#sktime.decomposition.VAMPModel.transform) gives access to $f$ and $g$:"
+    "The model's [transform(data, forward=True)](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel.transform) gives access to $f$ and $g$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = model.transform(feature_trajectory, right=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.singular_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.output_dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.shape"
    ]
   },
   {
@@ -393,7 +435,7 @@
    "outputs": [],
    "source": [
     "vamp_estimator.scaling = \"kinetic_map\"\n",
-    "scaled_model = vamp_estimator.fit(feature_trajectory).fetch_model()\n",
+    "scaled_model = vamp_estimator.fit(covars).fetch_model()\n",
     "\n",
     "# plotting transformations\n",
     "plt.plot(model.transform(feature_trajectory, right=False), label=\"unscaled\")\n",
@@ -509,7 +551,9 @@
    "source": [
     "n_grid_x = 20\n",
     "n_grid_y = 10\n",
-    "kde_trajectory = pbf_simulator.transform_to_density(trajectory, n_grid_x=n_grid_x, n_grid_y=n_grid_y, n_jobs=8)"
+    "kde_trajectory = pbf_simulator.transform_to_density(\n",
+    "    trajectory, n_grid_x=n_grid_x, n_grid_y=n_grid_y, n_jobs=8\n",
+    ")"
    ]
   },
   {
@@ -543,8 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimator = sktime.decomposition.VAMP(lagtime=100)\n",
-    "model = estimator.fit(kde_trajectory).fetch_model()"
+    "model = sktime.decomposition.VAMP.from_data(kde_trajectory, lagtime=100)"
    ]
   },
   {
@@ -560,8 +603,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projection_left = model.transform(kde_trajectory, right=False)\n",
-    "projection_right = model.transform(kde_trajectory, right=True)"
+    "projection_left = model.transform(kde_trajectory, forward=True)\n",
+    "projection_right = model.transform(kde_trajectory, forward=False)"
    ]
   },
   {
@@ -636,7 +679,7 @@
     "\n",
     "$$ \\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)] $$\n",
     "\n",
-    "we can also apply the forward operator to frames by calling [forward()](../api/generated/sktime.decomposition.VAMPModel.rst#sktime.decomposition.VAMPModel.forward). It also allows to project onto specific processes by setting all other singular values to zero."
+    "we can also apply the forward operator to frames by calling [forward()](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel.forward). It also allows to project onto specific processes by setting all other singular values to zero."
    ]
   },
   {
@@ -686,9 +729,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forward_component0 = model.forward(kde_trajectory, component=0)\n",
-    "forward_component1 = model.forward(kde_trajectory, component=1)\n",
-    "forward_component0123 = model.forward(kde_trajectory, component=[0, 1, 2, 3])"
+    "forward_component0 = model.forward(kde_trajectory, components=0)\n",
+    "forward_component1 = model.forward(kde_trajectory, components=1)\n",
+    "forward_component0123 = model.forward(kde_trajectory, components=[0, 1, 2, 3])"
    ]
   },
   {
