- tica inherits vamp, both can be estimated from covariances & timeseries data, - minor fixes

--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -70,9 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(\n",
-    "    lagtime=1  # the lag time \"tau\"\n",
-    ")"
+    "tica = sktime.decomposition.TICA()"
    ]
   },
   {
@@ -81,9 +79,9 @@
    "source": [
     "yielding an estimator which operates on symmetrized correlation matrices and takes as many eigenvalues as required to capture 95% of the kinetic variance of the time series.\n",
     "\n",
-    "It can be fit by calling [fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fit) or [partial_fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.partial_fit).\n",
+    "It can be fit by calling [fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fit). This method distinguishes between arguments which are covariance matrices in form of a symmetrized [CovarianceModel](../api/generated/sktime.covariance.CovarianceModel.rst#sktime.covariance.CovarianceModel) and raw timeseries data. In case of raw timeseries data, the lagtime $\\tau$ must be provided, otherwise it is inferred from the covariance model.\n",
     "\n",
-    "_Note_: TICA per default makes reversible estimates and then assumes, that the data is in equilibrium. In case of reversible estimate but non-equilibrium data (e.g., many short trajectories which start off-equilibrium), [Koopman reweighting](#Koopman-reweighting) can be used."
+    "_Note_: TICA makes reversible estimates and then assumes, that the data is in equilibrium. In case of reversible estimate but non-equilibrium data (e.g., many short trajectories which start off-equilibrium), [Koopman reweighting](#Koopman-reweighting) can be used."
    ]
   },
   {
@@ -92,7 +90,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica.fit(np.random.uniform(size=(1000, 5)))"
+    "data = np.random.uniform(size=(1000, 5))\n",
+    "tica.fit(data, lagtime=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optionally, covariances can be estimated and then used to fit the estimator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covariances = sktime.decomposition.TICA.covariance_estimator(lagtime=1).fit(data)\n",
+    "tica.fit(covariances)"
    ]
   },
   {
@@ -259,7 +275,6 @@
    "outputs": [],
    "source": [
     "tica = sktime.decomposition.TICA(\n",
-    "    lagtime=1,  # time shift is one step\n",
     "    dim=1  # fix projection dimension explicitly\n",
     ")"
    ]
@@ -268,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the [tica model](../api/generated/sktime.decomposition.TICAModel.rst#sktime.decomposition.TICAModel) can be estimated.\n",
+    "Now the [tica model](../api/generated/sktime.decomposition.CovarianceKoopmanModel.rst#sktime.decomposition.CovarianceKoopmanModel) can be estimated.\n",
     "\n",
     "_Note_: In the reversible (default) case, this assumes that the data comes from an equilibirum distribution. Applying the method as-is to short off-equilibrium data produces heavily biased estimates. See [Koopman reweighting](#Koopman-reweighting) (or the corresponding [API docs](../api/generated/sktime.covariance.KoopmanWeightingEstimator.rst#sktime.covariance.KoopmanWeightingEstimator)) for a reweighting technique that extends TICA to non-equilibrium data."
    ]
@@ -279,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica_model = tica.fit(feature_trajectory).fetch_model()  # fit and fetch model"
+    "tica_model = tica.fit(feature_trajectory, lagtime=1).fetch_model()  # fit and fetch model"
    ]
   },
   {
@@ -301,7 +316,7 @@
     "ax1.set_xlabel('x')\n",
     "ax1.set_ylabel('t')\n",
     "\n",
-    "dxy = tica_model.eigenvectors[:, 0]  # dominant tica component\n",
+    "dxy = tica_model.singular_vectors_left[:, 0]  # dominant tica component\n",
     "\n",
     "ax2.scatter(*(feature_trajectory.T), marker='.')\n",
     "x, y = np.meshgrid(\n",
@@ -355,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica_model.feature_tic_correlation"
+    "tica_model.feature_component_correlation"
    ]
   },
   {
@@ -393,7 +408,7 @@
    "outputs": [],
    "source": [
     "tica.scaling = None\n",
-    "tica_model = tica.fit(feature_trajectory).fetch_model()"
+    "tica_model = tica.fit(feature_trajectory, lagtime=1).fetch_model()"
    ]
   },
   {
@@ -410,7 +425,7 @@
    "outputs": [],
    "source": [
     "tica.scaling = \"kinetic_map\"  # default\n",
-    "tica_model_kinetic_map = tica.fit(feature_trajectory).fetch_model()"
+    "tica_model_kinetic_map = tica.fit(feature_trajectory, lagtime=1).fetch_model()"
    ]
   },
   {
@@ -427,7 +442,7 @@
    "outputs": [],
    "source": [
     "tica.scaling = \"commute_map\"\n",
-    "tica_model_commute_map = tica.fit(feature_trajectory).fetch_model()"
+    "tica_model_commute_map = tica.fit(feature_trajectory, lagtime=1).fetch_model()"
    ]
   },
   {
@@ -470,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica = sktime.decomposition.TICA(lagtime=1, dim=1)"
+    "tica = sktime.decomposition.TICA(dim=1)"
    ]
   },
   {
@@ -486,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koopman_estimator = sktime.covariance.KoopmanWeightingEstimator(lagtime=tica.lagtime)\n",
+    "koopman_estimator = sktime.covariance.KoopmanWeightingEstimator(lagtime=1)\n",
     "reweighting_model = koopman_estimator.fit(feature_trajectory).fetch_model()"
    ]
   },
@@ -503,7 +518,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica_model_reweighted = tica.fit(feature_trajectory, weights=reweighting_model).fetch_model()"
+    "tica_model_reweighted = tica.fit(feature_trajectory, lagtime=1, weights=reweighting_model).fetch_model()"
    ]
   },
   {
@@ -525,7 +540,7 @@
     "ax1.set_xlabel('x')\n",
     "ax1.set_ylabel('t')\n",
     "\n",
-    "dxy = tica_model.eigenvectors[:, 0]  # dominant tica component\n",
+    "dxy = tica_model.singular_vectors_left[:, 0]  # dominant tica component\n",
     "\n",
     "ax2.scatter(*(feature_trajectory.T), marker='.')\n",
     "x, y = np.meshgrid(\n",
