--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the data, all that is left to do is fitting a model by providing covariances and obtaining it from the estimator or using the [from_data](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP.from_data) shortcut directly."
+    "Given the data, all that is left to do is to fit a model by providing covariances and obtaining it from the estimator or using `fit` on the timeseries directly. In the latter case, a lagtime must be provided."
    ]
   },
   {
@@ -100,14 +100,14 @@
    "outputs": [],
    "source": [
     "covars = sktime.decomposition.VAMP.covariance_estimator(\n",
-    "    lagtime=1  # the time lag under which the covariance matrices are estimated\n",
+    "    lagtime=1  # the time lag with which the covariance matrices are estimated\n",
     ").fit(feature_trajectory).fetch_model()\n",
     "vamp_estimator.fit(covars)\n",
     "model = vamp_estimator.fetch_model()\n",
     "\n",
     "# ---- or ----\n",
     "\n",
-    "model = sktime.decomposition.VAMP.from_data(feature_trajectory, dim=1, lagtime=1)"
+    "model = sktime.decomposition.VAMP(dim=1).fit(feature_trajectory, lagtime=1).fetch_model()"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "C_{tt} &= \\mathbb{E}_t[(\\chi_1(x_{t+\\tau})-\\mu_1)(\\chi_1(x_{t+\\tau})-\\mu_1)^\\top]\n",
     "\\end{aligned}$$\n",
     "\n",
-    "can be computed by the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). <span style=\"color:red\">Otherwise the covariance matrices should be estimated by ...</span> These covariance matrices can be accessed in the computed model:"
+    "can be computed by the [Covariances estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). These covariance matrices can be accessed in the computed model:"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = sktime.decomposition.VAMP.from_data(kde_trajectory, lagtime=100)"
+    "model = sktime.decomposition.VAMP().fit(kde_trajectory, lagtime=100).fetch_model()"
    ]
   },
   {
