[docs] fix katex errors

--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -510,9 +510,9 @@
    "source": [
     "## Regular space clustering\n",
     "\n",
-    "Clusters data objects in such a way, that cluster centers are at least in distance of $d_\\min$ to each other according to the given metric. The assignment of data objects to cluster centers is performed by Voronoi partioning.\n",
+    "Clusters data objects in such a way, that cluster centers are at least in distance of $d_\\mathrm{min}$ to each other according to the given metric. The assignment of data objects to cluster centers is performed by Voronoi partioning.\n",
     "\n",
-    "Regular space clustering <cite data-cite=\"nbcluster-prinz2011markov\">(Prinz, 2011)</cite> is very similar to Hartigan’s leader algorithm <cite data-cite=\"nbcluster-hartigan1975clustering\">(Hartigan, 1975)</cite>. It consists of two passes through the data. Initially, the first data point is added to the list of centers. For every subsequent data point, if it has a greater distance than $d_\\min$ from every center, it also becomes a center. In the second pass, a Voronoi discretization with the computed centers is used to partition the data.\n",
+    "Regular space clustering <cite data-cite=\"nbcluster-prinz2011markov\">(Prinz, 2011)</cite> is very similar to Hartigan’s leader algorithm <cite data-cite=\"nbcluster-hartigan1975clustering\">(Hartigan, 1975)</cite>. It consists of two passes through the data. Initially, the first data point is added to the list of centers. For every subsequent data point, if it has a greater distance than $d_\\mathrm{min}$ from every center, it also becomes a center. In the second pass, a Voronoi discretization with the computed centers is used to partition the data.\n",
     "\n",
     "To perform regular space clustering, a corresponding [RegularSpaceClustering](../api/generated/sktime.clustering.RegularSpaceClustering.rst#sktime.clustering.RegularSpaceClustering) estimator can be created: "
    ]
@@ -550,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotting the data assignments and cluster centers reveals that a nice partition of the space can be achieved. This however is very dependent on the hyperparameters $d_\\min$ and `max_centers`, which in higher dimensions can be difficult to choose and assess."
+    "Plotting the data assignments and cluster centers reveals that a nice partition of the space can be achieved. This however is very dependent on the hyperparameters $d_\\mathrm{min}$ and `max_centers`, which in higher dimensions can be difficult to choose and assess."
    ]
   },
   {
@@ -666,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
