[clustering] fixed custom metric instructions

--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -580,20 +580,18 @@
     "\n",
     "Everything until now used a Euclidean metric $d(x,y) = \\sqrt{\\sum_i (x_i - y_i)^2}$ for clustering. It is however possible, to define custom metrics. As the metric evaluation is performance-critical, custom metrics are only supported by implementing a C++ interface and exporting it to Python.\n",
     "\n",
-    "Such an implementation, here at the example of the maximum metric (induced by the maximum norm $\\|\\mathbf{x}\\|_\\infty := \\max\\{|\\mathbf{x}_1|,\\ldots,|\\mathbf{x}_d|\\}$), can look like\n",
+    "Such an implementation, here at the example of the maximum metric (or Chebyshev distance, induced by the maximum norm $\\|\\mathbf{x}\\|_\\infty := \\max\\{|\\mathbf{x}_1|,\\ldots,|\\mathbf{x}_d|\\}$), can look like\n",
     "\n",
     "```cpp\n",
-    "#pragma once\n",
-    "\n",
-    "#include <metric.h>\n",
+    "#include \"metric.h\"\n",
     "\n",
     "class MaximumMetric : public Metric {\n",
     "public:\n",
     "\n",
-    "    double compute_d(const double *xs, const double *ys, std::size_t dim) const override {\n",
+    "    double compute_squared_d(const double* xs, const double* ys, std::size_t dim) const override {\n",
     "        return _compute(xs, ys, dim);\n",
     "    }\n",
-    "    float compute_f(const float *xs, const float *ys, std::size_t dim) const override {\n",
+    "    float compute_squared_f(const float* xs, const float* ys, std::size_t dim) const override {\n",
     "        return _compute(xs, ys, dim);\n",
     "    }\n",
     "private:\n",
@@ -606,32 +604,54 @@
     "                result = d;\n",
     "            }\n",
     "        }\n",
-    "        return result;\n",
+    "        return result*result;\n",
     "    }\n",
     "};\n",
-    "```\n",
     "\n",
-    "The required include directories can be obtained by a call to `sktime.capi_includes()`.\n",
-    "\n",
-    "What is left to do is export the metric, e.g., with [pybind11](https://github.com/pybind/pybind11):\n",
-    "```cpp\n",
-    "#include <pybind11/pybind11.h>\n",
-    "#include <metric.h>\n",
-    "\n",
-    "PYBIND11_MODULE(metric_bindings, module) {\n",
+    "PYBIND11_MODULE(custom_metric, module) {\n",
     "    py::class_<MaximumMetric, Metric>(module, \"MaximumMetric\").def(py::init<>());\n",
     "}\n",
     "```\n",
     "\n",
-    "and use it during clustering with your favorite clustering algorithm\n",
+    "The scikit-time required include directories can be obtained by a call to `sktime.capi_includes()`. Here, the class is exported to Python with with [pybind11](https://github.com/pybind/pybind11) in the same `cpp` file.\n",
+    "\n",
+    "Setting up compilation through, e.g., setuptools can be performed like follows:\n",
     "\n",
     "```python\n",
-    "import metric_bindings\n",
-    "estimator = sktime.clustering.KmeansClustering(\n",
-    "    n_clusters=100,\n",
-    "    metric=metric_bindings.MaximumMetric()\n",
+    "import setuptools\n",
+    "import pybind11\n",
+    "import sktime\n",
+    "\n",
+    "setuptools.setup(\n",
+    "    name='custom_metric',\n",
+    "    packages=setuptools.find_packages(),\n",
+    "    version='0.1',\n",
+    "    ext_modules=[\n",
+    "        setuptools.Extension(\n",
+    "            name='custom_metric',\n",
+    "            sources=['bindings.cpp'],\n",
+    "            language='c++',\n",
+    "            include_dirs=sktime.capi_includes() + [pybind11.get_include()],\n",
+    "            extra_compile_args=['-fopenmp'],  # OpenMP support, optional\n",
+    "            extra_link_args=['-lgomp']  # OpenMP support, optional\n",
+    "        )\n",
+    "    ]\n",
     ")\n",
-    "```"
+    "```\n",
+    "\n",
+    "After successful compilation (`python setup.py develop` or `install`), the metric can be used via\n",
+    "\n",
+    "```python\n",
+    "import sktime\n",
+    "import custom_metric\n",
+    "obs = sktime.data.ellipsoids().observations(1000)\n",
+    "\n",
+    "sktime.clustering.metrics.register('max', custom_metric.MaximumMetric)\n",
+    "c = sktime.clustering.KmeansClustering(n_clusters=5, metric='max')\n",
+    "c.fit(obs)\n",
+    "```\n",
+    "\n",
+    "It is important to first import `sktime`, so that the base type `Metric` is available."
    ]
   },
   {
