--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# TICA\n",
     "\n",
-    "For users already familiar with the TICA interface: The corresponding [API docs](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA).\n",
-    "\n",
+    "For users already familiar with the TICA interface: The corresponding [API docs](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "TICA <cite data-cite=\"nbtica-molgedey1994separation\">(Molgedey, 1994)</cite> is short for Time-lagged Independent Component Analysis (sometimes also time structure-based ICA) and is a linear transformation method that can be used for dimensionality reduction. It was introduced for molecular dynamics in <cite data-cite=\"nbtica-naritomi2011slow\">(Naritomi, 2011)</cite>, later <cite data-cite=\"nbtica-perez2013identification\">(Pérez-Hernández, 2013)</cite> and as a method in the pipeline of Markov model construction in <cite data-cite=\"nbtica-perez2013identification\">(Pérez-Hernández, 2013)</cite> and <cite data-cite=\"nbtica-schwantes2013improvements\">(Schwantes, 2013)</cite>.\n",
     "\n",
     "> The input for the TICA algorithm is a time-series dataset. Due to the linear nature of the method it can help, to first featurize the input data by passing it through nonlinear functions. This could be for example pairwise distances in case the input is based on molecular dynamics data.\n",
@@ -98,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Optionally, covariances can be estimated and then used to fit the estimator:"
+    "Optionally, covariances can be estimated and then used to fit the estimator. The [covariance_estimator](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.covariance_estimator) method yields a [Covariance](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance) estimator which is properly configured for TICA (i.e., it symmetrizes the covariances and computes $C_{00} = C_{tt}$ and $C_{0t}$):"
    ]
   },
   {
@@ -571,7 +576,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Raw Cell Format",
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -587,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
