some docs fixes and offline rendering of equations

--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -19,13 +19,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt  # matplotlib for plotting\n",
+    "# matplotlib for plotting\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np \n",
-    "import sktime  # import the library\n",
+    "# import the library\n",
+    "import sktime\n",
     "\n",
-    "from sklearn.mixture import GaussianMixture  # for example data generation\n",
+    "# for example data generation\n",
+    "from sklearn.mixture import GaussianMixture\n",
     "\n",
-    "rnd = np.random.RandomState(seed=17)  # create a random state with fixed seed for reproducibility"
+    "# create a random state with fixed seed for reproducibility\n",
+    "rnd = np.random.RandomState(seed=17)\n",
+    "\n",
+    "# disable convergence warnings\n",
+    "import warnings; warnings.simplefilter('ignore')"
    ]
   },
   {
@@ -42,7 +49,8 @@
    "outputs": [],
    "source": [
     "n_components = 5\n",
-    "gmm = GaussianMixture(n_components=n_components, random_state=rnd, covariance_type='diag')  # create a GMM object"
+    "# create a GMM object\n",
+    "gmm = GaussianMixture(n_components=n_components, random_state=rnd, covariance_type='diag')"
    ]
   },
   {
@@ -61,9 +69,12 @@
    "outputs": [],
    "source": [
     "gmm.weights_ = np.array([10., 100., 10000., 10., 10.])\n",
-    "gmm.weights_ /= gmm.weights_.sum()  # weights need to form a probability distribution\n",
-    "gmm.means_ = rnd.uniform(low=-20., high=20., size=(n_components, 2))  # centers are random uniform\n",
-    "gmm.covariances_ = rnd.uniform(low=15., high=18., size=(n_components, 2))  # same for covariance matrices"
+    "# weights need to form a probability distribution\n",
+    "gmm.weights_ /= gmm.weights_.sum()\n",
+    "# centers are random uniform\n",
+    "gmm.means_ = rnd.uniform(low=-20., high=20., size=(n_components, 2))\n",
+    "# same for covariance matrices\n",
+    "gmm.covariances_ = rnd.uniform(low=15., high=18., size=(n_components, 2))"
    ]
   },
   {
@@ -79,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples, labels = gmm.sample(500000)  # generate data\n",
+    "# generate data\n",
+    "samples, labels = gmm.sample(500000)\n",
     "plt.figure(figsize=(6, 5))\n",
     "plt.hexbin(*(samples.T), bins='log')\n",
     "plt.axis('off')\n",
