--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -112,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covariances = sktime.decomposition.TICA.covariance_estimator(lagtime=1).fit(data)\n",
+    "covariances = sktime.decomposition.TICA.covariance_estimator(lagtime=1) \\\n",
+    "    .fit(data)\n",
     "tica.fit(covariances)"
    ]
   },
@@ -169,9 +170,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ellipsoids = sktime.data.ellipsoids(seed=17)  # create dataset instance\n",
-    "discrete_trajectory = ellipsoids.discrete_trajectory(n_steps=1000)  # discrete transitions\n",
-    "feature_trajectory = ellipsoids.map_discrete_to_observations(discrete_trajectory)  # corresponding observations"
+    "# create dataset instance\n",
+    "ellipsoids = sktime.data.ellipsoids(seed=17)\n",
+    "# discrete transitions\n",
+    "discrete_trajectory = ellipsoids.discrete_trajectory(n_steps=1000)\n",
+    "# corresponding observations\n",
+    "feature_trajectory = ellipsoids.map_discrete_to_observations(discrete_trajectory)"
    ]
   },
   {
@@ -523,7 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tica_model_reweighted = tica.fit(feature_trajectory, lagtime=1, weights=reweighting_model).fetch_model()"
+    "tica_model_reweighted = tica.fit(feature_trajectory, lagtime=1, weights=reweighting_model) \\\n",
+    "    .fetch_model()"
    ]
   },
   {
@@ -576,7 +581,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
