--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -93,8 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ellipsoids = sktime.data.ellipsoids(seed=17)  # create dataset instance with fixed seed for reproducibility\n",
-    "feature_trajectory = ellipsoids.observations(1000)  # 1000 observations\n",
+    "# create dataset instance with fixed seed for reproducibility\n",
+    "ellipsoids = sktime.data.ellipsoids(seed=17)\n",
+    "# 1000 observations\n",
+    "feature_trajectory = ellipsoids.observations(1000)\n",
     "print(feature_trajectory.shape)"
    ]
   },
@@ -640,9 +642,12 @@
     "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*5, 13))\n",
     "f.suptitle(\"Lagtime {}, VAMP-E score {:.3f}\".format(tau, model.score(score_method=\"VAMPE\")))\n",
     "for i in range(n_sing):\n",
-    "    axes[i][0].plot(np.arange(1600, 5000), projection_left[:-tau][1600:5000, i], label=\"left\")\n",
-    "    axes[i][0].plot(np.arange(1600, 5000), projection_right[tau:][1600:5000, i], label=\"right\")\n",
-    "    axes[i][0].vlines([1600 + i*400 for i in range(1,8)], np.min(projection_left[:, i]), np.max(projection_left[:, i]), linestyles='dotted')\n",
+    "    left = projection_left[:-tau][1600:5000, i]\n",
+    "    right = projection_right[tau:][1600:5000, i]\n",
+    "    axes[i][0].plot(np.arange(1600, 5000), left, label=\"left\")\n",
+    "    axes[i][0].plot(np.arange(1600, 5000), right, label=\"right\")\n",
+    "    axes[i][0].vlines([1600 + i*400 for i in range(1,8)], \n",
+    "                      np.min(left), np.max(right), linestyles='dotted')\n",
     "    axes[i][0].set_title(f\"VAMP projection component {i+1}\")\n",
     "    axes[i][0].set_xlabel(\"time\")\n",
     "    axes[i][0].legend()\n",
@@ -756,7 +761,8 @@
     "    [kde_trajectory, forward_component0, \n",
     "     forward_component1, forward_component0123\n",
     "    ], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y, nrows=2, ncols=2, \n",
-    "    figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \"dominant components 0, 1, 2, 3\"])\n",
+    "    figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \n",
+    "                             \"dominant components 0, 1, 2, 3\"])\n",
     "HTML(animation.to_html5_video())"
    ]
   },
