--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -336,3 +336,21 @@
   year={1989},
   publisher={Ieee}
 }
+@incollection{hotelling1992relations,
+  title={Relations between two sets of variates},
+  author={Hotelling, Harold},
+  booktitle={Breakthroughs in statistics},
+  pages={162--190},
+  year={1992},
+  publisher={Springer}
+}
+@article{williams2015data,
+  title={A data--driven approximation of the koopman operator: Extending dynamic mode decomposition},
+  author={Williams, Matthew O and Kevrekidis, Ioannis G and Rowley, Clarence W},
+  journal={Journal of Nonlinear Science},
+  volume={25},
+  number={6},
+  pages={1307--1346},
+  year={2015},
+  publisher={Springer}
+}
