drunkards walk with barriers

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -354,3 +354,13 @@
   year={2015},
   publisher={Springer}
 }
+@article{bresenham1965algorithm,
+  title={Algorithm for computer control of a digital plotter},
+  author={Bresenham, Jack E},
+  journal={IBM Systems journal},
+  volume={4},
+  number={1},
+  pages={25--30},
+  year={1965},
+  publisher={IBM}
+}
