--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -364,3 +364,43 @@
   year={1965},
   publisher={IBM}
 }
+@article{noe2009constructing,
+  title={Constructing the equilibrium ensemble of folding pathways from short off-equilibrium simulations},
+  author={No{\'e}, Frank and Sch{\"u}tte, Christof and Vanden-Eijnden, Eric and Reich, Lothar and Weikl, Thomas R},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={45},
+  pages={19011--19016},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+@article{weinan2006towards,
+  title={Towards a theory of transition paths},
+  author={Weinan, E and Vanden-Eijnden, Eric},
+  journal={Journal of statistical physics},
+  volume={123},
+  number={3},
+  pages={503},
+  year={2006},
+  publisher={Springer}
+}
+@article{berezhkovskii2009reactive,
+  title={Reactive flux and folding pathways in network models of coarse-grained protein dynamics},
+  author={Berezhkovskii, Alexander and Hummer, Gerhard and Szabo, Attila},
+  journal={The Journal of chemical physics},
+  volume={130},
+  number={20},
+  pages={05B614},
+  year={2009},
+  publisher={American Institute of Physics}
+}
+@article{valleriani2015circular,
+  title={Circular analysis in complex stochastic systems},
+  author={Valleriani, Angelo},
+  journal={Scientific reports},
+  volume={5},
+  number={1},
+  pages={1--6},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
