--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -404,3 +404,10 @@
   year={2015},
   publisher={Nature Publishing Group}
 }
+@book{doyle1984random,
+  title={Random walks and electric networks},
+  author={Doyle, Peter G and Snell, J Laurie},
+  volume={22},
+  year={1984},
+  publisher={American Mathematical Soc.}
+}
