--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Transition path theory (TPT) is a method to study the ensemble of reactive trajectories, i.e., trajectories which come from a defined set of states $A$ and go next to $B$. It can answer at which rate they occur, as well as depict parallel pathways, traps, sequences of events, etc. Furthermore it introduces the notion of 'committor functions', which deals with probabilities of ending up in set $A$ or $B$ given the trajectory starts at some state potentially outside $A\\cup B$.\n",
     "\n",
-    "A mathematical description of TPT can be found in <cite data-cite=\"nbtpt-weinan2006towards\">(Weinan, 2006) and </cite><cite data-cite=\"nbtpt-metzner2009transition\">(Metzner, 2009)</cite>. The implementation is based on <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite>. Coarse-graining by path decomposition is presented in <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite> and <cite data-cite=\"nbtpt-berezhkovskii2009reactive\">(Berezhokovskii, 2009)</cite>.\n",
+    "A mathematical description of TPT can be found in <cite data-cite=\"nbtpt-weinan2006towards\">(E, 2006) and </cite><cite data-cite=\"nbtpt-metzner2009transition\">(Metzner, 2009)</cite>. The implementation is based on <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite>. Coarse-graining by path decomposition is presented in <cite data-cite=\"nbtpt-noe2009constructing\">(Noe, 2009)</cite> and <cite data-cite=\"nbtpt-berezhkovskii2009reactive\">(Berezhokovskii, 2009)</cite>.\n",
     "    \n",
     "To demonstrate the TPT API ([API docs here](../api/generated/sktime.markov.ReactiveFlux.rst#sktime.markov.ReactiveFlux)), in the following the example of a drunkard's walk is presented. The example is motivated by <cite data-cite=\"nbtpt-doyle1984random\">(Doyle, 1984)</cite> and <cite data-cite=\"nbtpt-valleriani2015circular\">(Valleriani, 2015)</cite>, where a drunkard is placed on a network of states and two special states, home and the bar. When the drunkard reaches either of these special states the trajectory stays there with high probability.\n",
     "One can then ask which paths can be taken and also with which probability the drunkard is going to reach either of the states given a certain current position."
@@ -35,7 +35,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can create a [DrunkardsWalk](../api/generated/sktime.data.drunkards_walk.rst#sktime.data.drunkards_walk) simulator by specifying bar and home locations. As the drunkard lives on a 2-dimensional surface, the locations are given in terms of integer coordinates. Internally, this is related back to $\\mathrm{width}\\times\\mathrm{height}$ states. On a 'normal' state (i.e., not home/bar or barrier), the drunkard can stagger a step within a $3\\times 3$ grid with uniform probability without staying on the same spot."
+    "We can create a [DrunkardsWalk](../api/generated/sktime.data.drunkards_walk.rst#sktime.data.drunkards_walk) simulator by specifying bar and home locations. As the drunkard lives on a 2-dimensional grid, the locations are given in terms of integer coordinates. Internally, this is related back to $\\mathrm{width}\\times\\mathrm{height}$ states. \n",
+    "\n",
+    "There are four kinds of states:\n",
+    "- home states: states which denote the location of the home\n",
+    "- bar states: states which denote the location of the bar\n",
+    "- barrier states: states which either cannot be crossed or can only be crossed by overcoming a potential (i.e., it is less likely to encounter these states in a trajectory)\n",
+    "- normal states: the drunkard can move freely by taking a step onto one of the adjacent grid cells with uniform probability unless it is a barrier."
    ]
   },
   {
@@ -53,7 +59,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make the scenario a bit more interesting, we can add hard and soft barriers by specifying start and end points of the barrier. If no weight is given, the barrier is `hard`, i.e., cannot be crossed by a trajectory."
+    "We can add hard and soft barriers by specifying start and end points of the barrier. If no weight is given, the barrier is `hard`, i.e., cannot be crossed by a trajectory. This enters the jump probabilities from adjacent cells $(i,j)$ as\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{P}(x_{t+1}=\\mathrm{barrier} \\mid x_t = (i, j)) = \\begin{cases} p \\leq 1/\\mathrm{weight} &\\text{, if weight positive,}\\\\ 0 &\\text{, otherwise.} \\end{cases}\n",
+    "$$\n",
+    "\n",
+    "That means the larger the weight, the smaller the probability to cross the barrier."
    ]
   },
   {
@@ -184,7 +196,7 @@
     "\n",
     "$$ q^{(+)}_i=\\mathbb{P}_{i}(T_{A}<T_{B}). $$\n",
     "\n",
-    "It also satisfies the boundary value problem\n",
+    "It also satisfies the boundary value problem (BVP)\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -234,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As one can observe, the forward committor probabilities increase gradually when moving from home to bar, vice versa for the backward committor."
+    "As one can observe, the forward committor probabilities increase gradually when moving from home to bar, vice versa for the backward committor. This is expected as the Markov state model is reversible."
    ]
   },
   {
@@ -421,9 +433,9 @@
     "    handles, labels = sim.plot_2d_map(ax, barrier_mode='hollow')\n",
     "\n",
     "    Q = pcca.memberships[:, i].reshape(sim.grid_size)\n",
-    "    cb = ax.imshow(Q, interpolation='nearest', origin='lower');\n",
+    "    cb = ax.imshow(Q, interpolation='nearest', origin='lower', cmap=plt.cm.Blues);\n",
     "norm = mpl.colors.Normalize(vmin=0, vmax=1)\n",
-    "fig.colorbar(plt.cm.ScalarMappable(norm=norm), ax=axes, shrink=.8);"
+    "fig.colorbar(plt.cm.ScalarMappable(norm=norm, cmap=plt.cm.Blues), ax=axes, shrink=.8);"
    ]
   },
   {
@@ -464,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected we obtain three four which are exactly the home states, the bar states, and the subdivided remainder."
+    "As expected we obtain four sets which are exactly the home states, the bar states, and the subdivided remainder."
    ]
   },
   {
@@ -638,9 +650,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(count_model.state_symbols, 'o')\n",
-    "plt.xlabel('state')\n",
-    "plt.ylabel('state');"
+    "print(f\"States not included in the count model: \"\n",
+    "      f\"{set(range(count_model.n_states_full)) - set(count_model.state_symbols)}\")"
    ]
   },
   {
