--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -376,7 +376,7 @@
 }
 @article{weinan2006towards,
   title={Towards a theory of transition paths},
-  author={Weinan, E and Vanden-Eijnden, Eric},
+  author={E, Weinan and Vanden-Eijnden, Eric},
   journal={Journal of statistical physics},
   volume={123},
   number={3},
